--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.3",
     "react": "^19.2.3",
     "lucide-react": "^0.561.0",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "@google/genai": "^0.2.1",
+    "react-markdown": "9"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
